--- a/new/nico-new.html
+++ b/new/nico-new.html
@@ -29,11 +29,10 @@ body {font-size:16px; letter-spacing: 1px; line-height: 1;}
   </div>
   <div class="w3-bar-block" style="margin-top:50px">
     <a href="#" onclick="w3_close()" class="w3-small w3-bar-item w3-button w3-hover-white">About</a> 
-    <p onclick="w3_close()" class="w3-small w3-bar-item">Projects:</p>
     <a href="#showcase" onclick="w3_close()" class="w3-small w3-bar-item w3-button w3-hover-white">The Gathering III</a> 
     <a href="#ebb" onclick="w3_close()" class="w3-small w3-bar-item w3-button w3-hover-white">EBB & FLOW</a> 
     <a href="#orbital" onclick="w3_close()" class="w3-small w3-bar-item w3-button w3-hover-white">Orbital</a> 
-    <a href="#packages" onclick="w3_close()" class="w3-small w3-bar-item w3-button w3-hover-white">Packages</a> 
+    <a href="#chakana" onclick="w3_close()" class="w3-small w3-bar-item w3-button w3-hover-white">Chakana</a> 
     <a href="#contact" onclick="w3_close()" class="w3-small w3-bar-item w3-button w3-hover-white">Contact</a>
   </div>
 </nav>
@@ -56,7 +55,7 @@ body {font-size:16px; letter-spacing: 1px; line-height: 1;}
     <h1 class="w3-large w3-text-black"><b>Graphic Designer / Art Director</b></h1>
 
       <br>
-      <h1 class="w3-medium w3-twothird">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
+      <h1 class="w3-small w3-twothird">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
  <br>In 2017 I have graduated from the Graphic Design Department of "Gerrit Rietveld Academie" in Amsterdam, Netherlands.</h1>
   </div>
 
@@ -71,14 +70,14 @@ body {font-size:16px; letter-spacing: 1px; line-height: 1;}
   <br>
   <!-- Photo grid (modal) -->
   <div>
-    <div>
+    <div class="w3-twothird">
       <img src="images/clusters.png" style="width:100%" onclick="onClick(this)" alt="Concrete meets bricks">
     </div>
     <br>
     <br>
     <br>
 
-    <div class="w3-half">
+    <div class="w3-twothird">
       <img src="images/gathering-poster-web.png" style="width:100%" onclick="onClick(this)" alt="Light, white and tight scandinavian design">
     </div>
 
@@ -134,7 +133,14 @@ body {font-size:16px; letter-spacing: 1px; line-height: 1;}
 <div class="w3-third">
       <img src="images/ebb3.png" style="width:100%" onclick="onClick(this)">
     </div>
-
+<div class="w3-container less">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
 
 </div>
  <div class="w3-container less" id="orbital" style="margin-top:65px;">
@@ -142,36 +148,95 @@ body {font-size:16px; letter-spacing: 1px; line-height: 1;}
     <h1 class="w3-small w3-text-black"><b>Personal Multidisciplinary Performance</b></h1>
 
       <br>
-      <h1 class="w3-medium w3-twothird" >Opening: Thursday, 5 July 2018, 19:00
-<br>Duration: 5-11 July
+      <h1 class="w3-medium w3-twothird" > 
+“Orbital” is a multidisciplinary project in which I creates sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
+
+The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.
+
+      </h1>
+  </div>
 <br>
-<br>up and down. 
-<br>right and left.
-<br>back and forth. 
 <br>
-<br>Ebb & Flow is a sound installation by Shammaes that brings together their respective interests in sound, design and architecture. The installation itself collides classic dualities, but by placing them in direct confrontation it ends up problematizing them.
 <br>
-<br>mechanics and dynamics. 
-<br>automata and avalanches.
-<br>harmonic and chaotic. 
+<div class="w3-twothird">
+      <img src="images/orbital/orbital4.jpg" style="width:100%" onclick="onClick(this)">
+
+    </div>
+
+<div class="w3-twothird">
+      <img src="images/orbital/orbital-all.png" style="width:100%" onclick="onClick(this)">
+
+
+<div class="w3-half">
+      <img src="images/orbital/orbital3.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+<div class="w3-half">
+      <img src="images/orbital/orbital6.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+
+<div>
+      <img src="images/orbital/orbital1.jpg" style="width:100%" onclick="onClick(this)">
+    </div>
+        </div>
+
+
+<div class="w3-container less">
 <br>
-<br>As time changes so do sounds and their convolution. The mechanical oscillation’s contact with soil is done at the expense of harmonicity and constancy. In some sense then, this form of oscillation resembles more and more to some other, more primordial ones; namely, that of a tide’s ebb and flow.</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
+
+ <div class="w3-container less" id="mo17" style="margin-top:65px;">
+    <h1 class="w3-large w3-text-black"><b>Modus Operandi 17</b></h1>
+    <h1 class="w3-small w3-text-black"><b>Graphic Design; Logo, 2 Publications & Website</b></h1>
+
+      <br>
+      <h1 class="w3-medium w3-twothird" > 
+“Orbital” is a multidisciplinary project in which I creates sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
+
+The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.
+
+      </h1>
+
+<iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#3933776/63680022" frameborder="0" allowfullscreen></iframe>
+
+  </div>
+
+
+
+<div class="w3-container less" id="chakana" style="margin-top:65px;">
+    <h1 class="w3-large w3-text-black"><b>Chakana</b></h1>
+        <h1 class="w3-small w3-text-black"><b>Zurich</b></h1>
+    <h1 class="w3-small w3-text-black"><b>Graphic Designer — 10 Events</b></h1>
+
+      <br>
+
+      <h1 class="w3-medium w3-twothird" >Opening: Thursday, 5 July 2018, 19:00</h1>
   </div>
 <br>
 <br>
 <br>
 
 <div class="w3-third">
-      <img src="images/ebb1.png" style="width:100%" onclick="onClick(this)">
+      <img src="images/chakana/familia.jpg" style="width:100%" onclick="onClick(this)">
     </div>
 <div class="w3-third">
-      <img src="images/ebb2.png" style="width:100%" onclick="onClick(this)">
+      <img src="images/chakana/life.jpg" style="width:100%" onclick="onClick(this)">
     </div>
 <div class="w3-third">
-      <img src="images/ebb3.png" style="width:100%" onclick="onClick(this)">
+      <img src="images/chakana/ghost.jpg" style="width:100%" onclick="onClick(this)">
     </div>
-
-
+<div class="w3-container less">
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
 
 
 <!-- Contact -->
