--- a/new/nico-new.html
+++ b/new/nico-new.html
@@ -200,7 +200,7 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.
 
       </h1>
-
+<div class="w3-twothird">
 <iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#3933776/63680022" frameborder="0" allowfullscreen></iframe>
 
   </div>
