--- a/new/nico-new.html
+++ b/new/nico-new.html
@@ -201,7 +201,7 @@ The performance at Thkio Ppalies will lasted for three hours. The crowd was able
 
       </h1>
 <div class="w3-twothird">
-<iframe style="width:100%; height:800px;" src="//e.issuu.com/embed.html#3933776/63680022" frameborder="0" allowfullscreen></iframe>
+<iframe style="width:100%; height:100%;" src="//e.issuu.com/embed.html#3933776/63680022" frameborder="0" allowfullscreen></iframe>
 
   </div>
 
