--- a/new/new2.html
+++ b/new/new2.html
@@ -23,23 +23,23 @@ body {font-size:16px; letter-spacing: 1px; line-height: 1;}
 body {
   margin: 0;
   font-size: 28px;
+  background-color: black;
+  color: white;
 
 }
 
 .header {
-  background-color: black;
   color: white;
 }
 
 #navbar {
   overflow: hidden;
-  background-color: black;
 }
 
 #navbar a {
   float: left;
   display: block;
-  color: white;
+  color: blue;
   text-align: center;
   padding: 8px 16px;
   text-decoration: none;
@@ -52,7 +52,6 @@ body {
 }
 
 #navbar a.active {
-  background-color: #4CAF50;
   color: white;
 }
 
@@ -75,19 +74,23 @@ body {
 
 <!-- Services -->
   <div class="w3-container less header" id="services">
-    <h1 class="w3-large"><b>Nico Stephou</b></h1>
-    <h1 class="w3-large"><b>Graphic Designer / Art Director</b></h1>
+    <p class="w3-large w3-twothird"><b>Nico Stephou</b></b>
+Graphic Designer / Art Director</p>
       <h1 class="w3-small w3-twothird">I am a graphic designer working on identities, printed matter, digital projects and visual research. As an art director I have worked for multiple foundations, record labels and art projects. I have also co-founded the community platform and record label Honest Electronics and the yearly festival “The Gathering”.<br>
  <br>In 2017 I have graduated from the Graphic Design Department of "Gerrit Rietveld Academie" in Amsterdam, Netherlands.</h1>
+
   </div>
+
+
 
 <div id="navbar" style="margin-top:0px">
     <a href="#" onclick="w3_close()" class="w3-small ">About</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-small ">The Gathering III</a> 
-    <a href="#ebb" onclick="w3_close()" class="w3-small ">EBB & FLOW</a> 
+    <a href="#showcase" onclick="w3_close()" class="w3-small ">Graphic Design</a> <br> 
+    <a href="#" onclick="w3_close()" class="w3-small" style="color:blue">Projects:</a> 
+    <a href="#ebb" onclick="w3_close()" class="w3-small ">EBB & FLOW</a>
     <a href="#orbital" onclick="w3_close()" class="w3-small ">Orbital</a> 
     <a href="#chakana" onclick="w3_close()" class="w3-small ">Chakana</a> 
-    <a href="#contact" onclick="w3_close()" class="w3-small ">Contact</a>
+    <a href="#contact" onclick="w3_close()" class="w3-small">Contact</a>
   </div>
 
 
@@ -132,19 +135,14 @@ body {
   </div>
 
 <div class="w3-container less">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 </div>
  <div class="w3-container less" id="ebb" style="margin-top:65px;">
-    <h1 class="w3-large w3-text-black"><b>EBB & FLOW by Shammaes</b></h1>
-    <h1 class="w3-small w3-text-black"><b>Poster Design</b></h1>
+    <h1 class="w3-large"><b>EBB & FLOW by Shammaes</b></h1>
+    <h1 class="w3-small"><b>Poster Design</b></h1>
 
       <br>
-      <h1 class="w3-medium w3-twothird" >Opening: Thursday, 5 July 2018, 19:00
+      <h1 class="w3-small w3-third" >Opening: Thursday, 5 July 2018, 19:00
 <br>Duration: 5-11 July
 <br>
 <br>up and down. 
@@ -163,6 +161,8 @@ body {
 <br>
 <br>
 
+
+
 <div class="w3-third">
       <img src="images/ebb1.png" style="width:100%" onclick="onClick(this)">
     </div>
@@ -173,21 +173,15 @@ body {
       <img src="images/ebb3.png" style="width:100%" onclick="onClick(this)">
     </div>
 <div class="w3-container less">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 </div>
 
 </div>
  <div class="w3-container less" id="orbital" style="margin-top:65px;">
-    <h1 class="w3-large w3-text-black"><b>Orbital</b></h1>
-    <h1 class="w3-small w3-text-black"><b>Personal Multidisciplinary Performance</b></h1>
+    <h1 class="w3-large"><b>Orbital</b></h1>
+    <h1 class="w3-small"><b>Personal Multidisciplinary Performance</b></h1>
 
       <br>
-      <h1 class="w3-medium w3-twothird" > 
+      <h1 class="w3-small w3-third" > 
 “Orbital” is a multidisciplinary project in which I creates sounds out of shapes. By creating a family of symbols, I propose a language. These symbols are translated into records, one record for each. The combination of these symbols lead to sound-sentences. By playing four of them at the same time on a quadraphonic sound system, I create a sonic image of this graphical conversation.
 
 The performance at Thkio Ppalies will lasted for three hours. The crowd was able to walk in and out of the space at any time as the atmosphere was intended for meditation.
