--- a/new/new2.html
+++ b/new/new2.html
@@ -85,7 +85,10 @@ Graphic Designer / Art Director</p>
 
 <div id="navbar" style="margin-top:0px">
     <a href="#" onclick="w3_close()" class="w3-small ">About</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-small ">Graphic Design</a> <br> 
+    <a href="#showcase" onclick="w3_close()" class="w3-small ">Design</a> 
+    <a href="#showcase" onclick="w3_close()" class="w3-small ">Sound</a> 
+        <a href="https://www.instagram.com/currenttribal/" target="_blank" onclick="w3_close()" class="w3-small">Tattoo</a> 
+    <br> 
     <a href="#" onclick="w3_close()" class="w3-small" style="color:blue">Projects:</a> 
     <a href="#ebb" onclick="w3_close()" class="w3-small ">EBB & FLOW</a>
     <a href="#orbital" onclick="w3_close()" class="w3-small ">Orbital</a> 
@@ -105,8 +108,8 @@ Graphic Designer / Art Director</p>
 
 
 <!-- Header -->
-  <div class="w3-container" style="margin-top:80px" id="showcase">
-    <h1 class="w3-large"><b>The Gathering III</b></h1>
+  <div class="w3-container" style="margin-top:10px" id="showcase">
+    <h1 class="w3-large"><b>The Gathering III</h1>
     <h1 class="w3-small w3-text-black"><b>Art Direction & Graphic Design</b></h1>
     <h1 class="w3-small w3-third" >The Gathering is a yearly festival organised by Honest Electronics in order to promote local underground talent.</h1>
   </div>
